<resources>
    <string name="app_name">FinalGreenFood</string>
    <string name="welcome">Welcome to Green Food!</string>
    <string name="growing">Start Growing</string>
    <string name="buy">Buy Sustainably</string>
    <string name="grow">Learn How to Grow Your Own Veggies!</string>
    <string name="back">Back</string>
    <string name="buySustainably">Buy Sustainably!</string>
    <string name="back2">Back</string>
    <string name="mint">Mint</string>
    <string name="Tomatoes" />
    <string name="tomatoPlant">Tomato Plant</string>
    <string name="tomatoDescri">Indeterminate tomatoes need constant pruning so they don\'t get bushy.  Also, don\'t water these plants every day; just a deep watering every couple of days is better.</string>
    <string name="cucumbers">Cucumbers</string>
    <string name="cucumbersDescri">Cucumbers</string>
    <string name="CucumbersDescri">Cucumbers need a structure to wrap their tendrils around so the plant can grow upwards.  Cucumbers are mostly water so be sure to water this plant frequently!</string>
    <string name="iceCream">Ice Cream</string>
    <string name="iceCreamDescri">Buying Locally can have a lot of perks so be sure to check out your local Farmers\' Market.  A lot of Farmers\' Markets sell a lot more than just produce- here is an example of some fresh locally-made ice cream available at a Farmers</string>
    <string name="iceCreamDescription">Buying local can have a lot of perks, so be sure to check out your local Farmers\' Market. Many Farmers\' Markets sell a lot more than just produce; here is an example of fresh, locally-made ice cream available at a local Farmers\' Market. How cool!</string>
</resources>