<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4FD855"
    tools:context=".MainActivity2grow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="242dp">

        <Button
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.016"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="179dp"
            android:layout_height="279dp"
            android:contentDescription="@string/Tomatoes"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/tomatoespic"
            tools:layout_conversion_absoluteHeight="344dp"
            tools:layout_conversion_absoluteWidth="198dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:text="@string/tomatoDescri"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_conversion_absoluteHeight="81dp"
            tools:layout_conversion_absoluteWidth="348dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="#F37BA4"
            android:text="@string/grow"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_conversion_absoluteHeight="30dp"
            tools:layout_conversion_absoluteWidth="378dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomatoPlant"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.107"
            tools:layout_conversion_absoluteHeight="30dp"
            tools:layout_conversion_absoluteWidth="132dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cucumbers"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="30dp"
            tools:layout_conversion_absoluteWidth="113dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:text="@string/CucumbersDescri"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.164"
            tools:layout_conversion_absoluteHeight="88dp"
            tools:layout_conversion_absoluteWidth="346dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="166dp"
            android:layout_height="213dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/cucumbers"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/cucumberpic"
            tools:layout_conversion_absoluteHeight="262dp"
            tools:layout_conversion_absoluteWidth="140dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--@btnback goes back to MainActivity -->

    <!--@cucumberpic is one of the required 3 pictures -->

</androidx.constraintlayout.widget.ConstraintLayout>