<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4FD855"
    tools:context=".MainActivity3buy">

    <!--Changed the layout to be a constraint layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="65dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:background="#F37BA4"
            android:text="@string/buySustainably"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            tools:layout_conversion_absoluteHeight="30dp"
            tools:layout_conversion_absoluteWidth="161dp" />

        <Button
            android:id="@+id/btnback2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="351dp"
            android:layout_height="100dp"
            android:text="@string/iceCreamDescription"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_conversion_absoluteHeight="99dp"
            tools:layout_conversion_absoluteWidth="321dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:contentDescription="@string/iceCream"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/icecreampic"
            tools:layout_conversion_absoluteHeight="428dp"
            tools:layout_conversion_absoluteWidth="325dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--@btnback2 goes to the home page- MainAcitivity -->

    <!--@icecreampic is one of the required 3 pictures.  Content is described -->

</androidx.constraintlayout.widget.ConstraintLayout>